# event-log-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: eventLogConfig.cmake.in
include/: event_log.h  event_log_config_def.h.in  event_log_def.h  event_measure.h  event_print.h  event_record.h  log_backend_printf.h  log_backend_tf.h  sha_common_macros.h  tcg.h
include/private/: debug.h  digest.h
src/: digest.c  event_log.c  event_print.c
test/: CMakeLists.txt
test/package-install/: CMakeLists.txt  install-and-verify.sh  main.c
